testsuite/tests/overloadedrecflds/should_compile/T22106_A.hs
module T22106_A where

import T22106_aux ( foo )

xyzzy = foo
