testsuite/tests/overloadedrecflds/should_fail/T16745C.hs
module T16745C where
field = ()
